--- a/src/component/resume/styles.css
+++ b/src/component/resume/styles.css
@@ -1,13 +1,18 @@
 .parent-wrapper {
     display: flex;
     flex-direction: column;
-    background-color: aliceblue;
+    background-image: url(../../images/page-background.jpeg);
+    background-color: black;
+    /* background-size: contain;
+    resize: both;
+    overflow: scroll; */
 }
 
-.parent-wrapper > div {
-    padding-top: 2rem;
+.parent-wrapper>div {
+    padding-top: 7rem;
 }
 
+/* Row-1 */
 .candidate-info {
     display: flex;
     flex-direction: row;
@@ -26,7 +31,167 @@
     margin-left: 2rem;
 }
 
+/* Row-2 */
+.candidate-intro {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.candidate-punchline {
+    width: 400px;
+    overflow-wrap: break-word;
+}
+
+.candidate-educationalinfo, .candidate-punchline {
+    cursor: pointer;
+    background-color: transparent;
+    width: 300px;
+    height: 300px;
+    perspective: 1000px;
+}
+
+.flip-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+.candidate-punchline:hover .flip-card-inner {
+    transform: rotateY(180deg);
+}
+
+.candidate-educationalinfo:hover .flip-card-inner {
+    transform: rotateY(180deg);
+}
+
+.flip-card-front, .flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+}
+
+.flip-card-front {
+    background-color: #bbb;
+    color: black;
+}
+
+.flip-card-back {
+    background-color: #2980b9;
+    color: white;
+    transform: rotateY(180deg);
+}
+
+/* Row-3 */
+.candidate-experience {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.candidate-skillset {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    width: 30%;
+    /* margin-right: 3rem; */
+}
+
+.skillset-list {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    padding-bottom: 1rem;
+    align-items: center;
+}
+
+.skillset-name {
+    display: flex;
+    padding-left: 1rem;
+    min-width: 10rem;
+}
+
+.candidate-employmenthistory {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: flex-end;
+    overflow-wrap: break-word;
+    width: 50%;
+
+    /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    width: 50%; */
+}
+
+.employer-card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    margin: 1rem;
+    ;
+    /* width: 50%; */
+}
+
+.employer-card:hover {
+    box-shadow: 0 16px 32px 0 rgba(12, 214, 89, 0.2);
+}
+
+.card-heading {
+    background-color: wheat;
+    min-height: 4rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0rem 1rem;
+}
+
+.card-body {
+    /* display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-left: 2rem; */
+}
+
+ul {
+    display: contents;
+    /* display: flex; */
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    text-align: -webkit-left;
+    list-style-type: square;
+    list-style-position: inside;
+    /* overflow-wrap: break-word; */
+    /* list-style: square inside url("sqpurple.gif"); */
+}
+
+li {
+    font-family: monospace;
+    font-size: larger;
+    padding: 1rem;
+}
+
+/* other styling */
+
 .image-style {
     width: 100px;
     height: 100px
+}
+
+.edu-image-style {
+    width: inherit;
+    height: inherit;
+}
+
+.logo-image-style {
+    width: 60px;
+    height: 60px
 }
